# excalidraw-tools

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
renderer/: Dockerfile  package.json  server.js
scripts/: render_diagrams.sh
skills/excalidraw/: SKILL.md
skills/excalidraw/references/: arrows.md  json-format.md
src/excalidraw_tools/: __init__.py  __main__.py  build.py  edit.py  golden_check.py  lib.py  preview.py  spec.py  sync_spec.py  validate.py
src/excalidraw_tools/data/golden/: simple-flow.excalidraw  simple-flow.spec.json
storage-backend/: package.json  server.js
